# PROJECT-RISK

./: .gitignore  Makefile  README.md  huj
doc/: CPU_CONNECTIONS.md  DECODE.md  Pipeline.md  TIMING.md  Timing.md  core_config.md  modules.md  simulation.md
emu/: Makefile  mem
emu/mem/: auipc  beq  jal  jalr  load  loop  lui  read  rv32ui-p-add.hex  write
emu/src/: cache.cpp  cache.h  cache_test.cpp  dcache.cpp  dcache.h  dcache_test.cpp  ddr.cpp  ddr.h  ddr_test.cpp  debug.h  fsb.cpp  fsb.h  fsb_test.cpp  icache.cpp  icache.h  icache_test.cpp  log.cpp  log.h  top.cpp
emu/test/: debug.py  selftest.py
hardware/cpu/: alu.v  branch.v  config.v  cpu.v  csr.v  decoder.v  hazard.v  memory.v  muldiv.v  shifter.v
hardware/tb/: Makefile  cpu_tb.v  rv32i.gtkw  selftest.py  test.py
hardware/top/: top.v
hardware/xst/: mimasv2.ucf  project.cfg
hdl/: Makefile  cpu_log.vcd
hdl/cpu/: Makefile  alu.v  alu.vcd  alu_tb.v  branch.v  config.v  cpu.v  cpu_log.vcd  csr.v  decoder.v  fetch.v  hazard.v  memory.v  muldiv.v  obj  regs.v  shifter.v
hdl/tb/: Makefile  cpu_log.vcd  cpu_tb.v  rv32imc.gtkw  selftest.py  test.py
hdl/top/: top.bmm  top.mem  top.v  top_bd.bmm
hdl/xst/: Makefile  cpu.ucf  mimasv2.ucf  project.cfg
software/basic/: CMakeLists.txt  (+1 more)
software/test/: CMakeLists.txt
software/test/src/: main.c  start.S
tests/: Makefile  rv32ui-p-add  rv32ui-p-add.dump  rv32ui-p-addi  rv32ui-p-addi.dump  rv32ui-p-and  rv32ui-p-and.dump  rv32ui-p-and.hex  rv32ui-p-andi  rv32ui-p-andi.dump  rv32ui-p-andi.hex  rv32ui-p-auipc  rv32ui-p-auipc.dump  rv32ui-p-beq  rv32ui-p-beq.dump  rv32ui-p-bge  rv32ui-p-bge.dump  rv32ui-p-bge.hex  rv32ui-p-bgeu  rv32ui-p-bgeu.dump  rv32ui-p-blt  rv32ui-p-blt.dump  rv32ui-p-blt.hex  rv32ui-p-bltu  rv32ui-p-bltu.dump  rv32ui-p-bltu.hex  rv32ui-p-bne  rv32ui-p-bne.dump  rv32ui-p-bne.hex  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-fence_i.hex  rv32ui-p-jal  rv32ui-p-jal.dump  rv32ui-p-jalr  rv32ui-p-jalr.dump  rv32ui-p-jalr.hex  rv32ui-p-lb  rv32ui-p-lb.dump  rv32ui-p-lb.hex  (+57 more)
tmp/: fin.S  sb.S
(+155 files in other folders)
